--- a/index.html
+++ b/index.html
@@ -403,6 +403,31 @@
           </ul>
         </div>
       </div>
+
+      <div class="form-subscribe">
+        <h3 class="contact-title">Subscribe</h3>
+        <form class="contact-form">
+          <div class="form-group">
+            <input
+              type="email"
+              class="contact-form-input"
+              placeholder="E-mail"
+              name="e-mail"
+              required
+            />
+          </div>
+          <button type="submit" class="contact-form-btn btn">
+            Subscribe
+            <svg class="svg-subscribe">
+              <use
+                href="./images/symbol-defs.svg#icon-icon-send"
+                width="24"
+                height="20"
+              ></use>
+            </svg>
+          </button>
+        </form>
+      </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -411,6 +436,74 @@
             <use href="./images/symbol-defs1.svg#icon-vector"></use>
           </svg>
         </button>
+        <h2 class="modal-title">
+          Leave your contacts and we will call you back
+        </h2>
+        <form class="modal-form form">
+          <div class="form-group">
+            <label class="form-label"
+              ><span>Name</span>
+              <div class="form-control">
+                <input
+                  type="text"
+                  class="form-input"
+                  name="fullname"
+                  required
+                />
+                <svg class="form-icon" width="12" height="12">
+                  <use href="./images/symbol-defs.svg#icon-Vector"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="form-group">
+            <label class="form-label"
+              ><span>Phone</span>
+              <div class="form-control">
+                <input type="tel" class="form-input" name="phone" required />
+                <svg class="form-icon" width="12" height="12">
+                  <use href="./images/symbol-defs.svg#icon-Vector1"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="form-group">
+            <label class="form-label"
+              ><span>Email</span>
+              <div class="form-control">
+                <input type="email" class="form-input" name="email" required />
+                <svg class="form-icon" width="12" height="12">
+                  <use href="./images/symbol-defs.svg#icon-Vector2"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+
+          <div class="form-group">
+            <textarea
+              name="message"
+              class="form-texterea"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+          <div class="form-group">
+            <input
+              type="checkbox"
+              class="form-checkbox"
+              id="policy"
+              name="policy"
+            />
+            <label for="policy" class="form-label-checkbox">
+              <span>
+                <svg class="form-checkbox-icon" width="10" height="8">
+                  <use href="./images/symbol-defs.svg#icon-vector3"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the Privacy Policy
+            </label>
+          </div>
+          <button type="submit" class="form-btn btn">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
