--- a/portfolio.html
+++ b/portfolio.html
@@ -273,6 +273,24 @@
             </li>
           </ul>
         </div>
+        <p class="contact-title">Subscribe</p>
+        <form class="contact-form">
+          <div class="form-div">
+            <input
+              type="email"
+              class="contact-form-input"
+              placeholder="E-mail"
+              name="e-mail"
+              required
+            />
+            <button type="submit" class="contact-form-btn btn">
+              Subscribe
+              <svg class="svg-subscribe" width="24" height="20">
+                <use href="./images/symbol-defs.svg#icon-icon-send"></use>
+              </svg>
+            </button>
+          </div>
+        </form>
       </div>
     </footer>
   </body>
