--- a/index.html
+++ b/index.html
@@ -402,9 +402,9 @@
             </li>
           </ul>
         </div>
-        <p class="contact-title">Subscribe</p>
-        <form class="contact-form">
-          <div class="form-div">
+        <div class="contact-iteam-class">
+          <p class="contact-title">Subscribe</p>
+          <form class="contact-form">
             <input
               type="email"
               class="contact-form-input"
@@ -418,8 +418,8 @@
                 <use href="./images/symbol-defs.svg#icon-icon-send"></use>
               </svg>
             </button>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -429,79 +429,58 @@
             <use href="./images/symbol-defs1.svg#icon-vector"></use>
           </svg>
         </button>
-        <h2 class="modal-title">
-          Leave your contacts and we will call you back
-        </h2>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
         <form class="modal-form form">
-          <div class="form-group">
-            <label class="form-label"
-              ><span>Name</span>
-              <div class="form-control">
-                <input
-                  type="text"
-                  class="form-input"
-                  name="fullname"
-                  required
-                />
-                <svg class="form-icon" width="12" height="12">
-                  <use href="./images/symbol-defs.svg#icon-Vector"></use>
-                </svg>
-              </div>
-            </label>
-          </div>
-          <div class="form-group">
-            <label class="form-label"
-              ><span>Phone</span>
-              <div class="form-control">
-                <input type="tel" class="form-input" name="phone" required />
-                <svg class="form-icon" width="12" height="12">
-                  <use href="./images/symbol-defs.svg#icon-Vector1"></use>
-                </svg>
-              </div>
-            </label>
-          </div>
-          <div class="form-group">
-            <label class="form-label"
-              ><span>Email</span>
-              <div class="form-control">
-                <input type="email" class="form-input" name="email" required />
-                <svg class="form-icon" width="12" height="12">
-                  <use href="./images/symbol-defs.svg#icon-Vector2"></use>
-                </svg>
-              </div>
-            </label>
-          </div>
-          <label class="form-label"><span>Comment</span></label>
-          <div class="form-group">
+          <label class="form-label"
+            ><span>Name</span>
+            <input type="text" class="form-input" name="fullname" required />
+            <svg class="form-icon" width="12" height="12">
+              <use href="./images/symbol-defs.svg#icon-Vector"></use>
+            </svg>
+          </label>
+          <label class="form-label"
+            ><span>Phone</span>
+            <input type="tel" class="form-input" name="phone" required />
+            <svg class="form-icon" width="12" height="12">
+              <use href="./images/symbol-defs.svg#icon-Vector1"></use>
+            </svg>
+          </label>
+          <label class="form-label"
+            ><span>Email</span>
+            <input type="email" class="form-input" name="email" required />
+            <svg class="form-icon" width="12" height="12">
+              <use href="./images/symbol-defs.svg#icon-Vector2"></use>
+            </svg>
+          </label>
+          <label class="form-label"
+            ><span>Comment</span>
             <textarea
               name="message"
               class="form-texterea"
               placeholder="Text input"
             ></textarea>
-          </div>
-          <div class="form-group">
-            <input
-              type="checkbox"
-              class="form-checkbox"
-              id="policy"
-              name="policy"
-            />
-            <label for="policy" class="form-label-checkbox">
-              <span>
-                <svg class="form-checkbox-icon" width="10" height="8">
-                  <use href="./images/symbol-defs.svg#icon-vector3"></use>
-                </svg>
-              </span>
-              I accept the terms and conditions of the
-              <a
-                href=""
-                class="privacy-policy"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Privacy Policy</a
-              >
-            </label>
-          </div>
+          </label>
+          <input
+            type="checkbox"
+            class="form-checkbox"
+            id="policy"
+            name="policy"
+          />
+          <label for="policy" class="form-label-checkbox">
+            <span>
+              <svg class="form-checkbox-icon" width="10" height="8">
+                <use href="./images/symbol-defs.svg#icon-vector3"></use>
+              </svg>
+            </span>
+            I accept the terms and conditions of the
+            <a
+              href=""
+              class="privacy-policy"
+              target="_blank"
+              rel="noopener noreferrer"
+              >Privacy Policy</a
+            >
+          </label>
           <button type="submit" class="form-btn btn">Send</button>
         </form>
       </div>
