--- a/portfolio.html
+++ b/portfolio.html
@@ -273,9 +273,9 @@
             </li>
           </ul>
         </div>
-        <p class="contact-title">Subscribe</p>
-        <form class="contact-form">
-          <div class="form-div">
+        <div class="contact-iteam-class">
+          <p class="contact-title">Subscribe</p>
+          <form class="contact-form">
             <input
               type="email"
               class="contact-form-input"
@@ -289,8 +289,8 @@
                 <use href="./images/symbol-defs.svg#icon-icon-send"></use>
               </svg>
             </button>
-          </div>
-        </form>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
